--- a/starter-code/myTicTacToe/styles.css
+++ b/starter-code/myTicTacToe/styles.css
@@ -1,6 +1,46 @@
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  border: solid black;
+}
+
+.container > div {
+  text-align: center;
+  width: calc(100% / 3);
+  background-color: green;
+  border: solid red 1px;
+}
+
+
+
 .tic-box {
-    width: 85px;
-    height: 85px;
+    width:  15vh;
+    height:  15vh;
+    border: 1px solid;
   }
 
-  
+  .turn_icon {
+    fill: #A8A8A8;
+  }
+
+.players-icons {
+  padding-left: 0;
+}
+
+.board-container {
+  /* margin-left: 40vh !important; */
+  /* height: 70vh; */
+}
+
+.moves-icons {
+  margin-top: 0.5em;
+  margin-right: 0.6em;
+}
+
+/* flex-fill */
