--- a/starter-code/myTicTacToe/styles.css
+++ b/starter-code/myTicTacToe/styles.css
@@ -35,6 +35,111 @@ body {
   height: 3.2rem; 
 }
 
+/* akhjksjdfnksdjfngklsjdfngkljsnfdglkjsndfglkjsndfglkjsndfglkjsndfglkjsdnfglkjn */
+.landing-page {
+  text-align: center;
+  max-width: 90%;
+  animation: fadeIn 1s ease-in-out; 
+}
+
+.landing-page_header {
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 2rem; 
+}
+
+  .pick-symbol {
+    margin: 4rem 0;
+    background-color: #1F3641;
+    padding: 2.4rem;
+    border-radius: 1.5rem;
+    box-shadow: inset 0 -0.8rem 0 #111C22; 
+  }
+
+  .landing-page-mark-selections {
+    margin: 2.4rem 0 1.7rem 0;
+    padding: 0.9rem 0.8rem;
+    background-color: #1A2A33;
+    border-radius: 1rem;
+    display: flex;
+    height: 7rem;
+    align-items: center;
+    justify-content: space-between;
+   }
+
+  .landing-page-mark-x, .landing-page-mark-o {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    transition: all 0.4s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-basis: 50%; 
+  }
+
+    .landing-page-mark-x:hover, .landing-page-mark-o:hover {
+      background-color: #1D303A;
+      cursor: pointer; 
+    }
+
+    .landing-page-mark-x.selected, .landing-page-mark-o.selected {
+      background-color: #A8BFC9; 
+    }
+
+      .landing-page-mark-x.selected > svg, .landing-page-mark-o.selected > svg {
+        fill: #1A2A33; 
+      }
+
+  .landing-page__x-icon, .landing-page__o-icon {
+    width: 3.2rem;
+    height: 3.2rem;
+    fill: #A8BFC9; 
+  }
+
+  .landing-page__footer {
+    opacity: 0.5; 
+  }
+
+  .button {
+    display: block;
+    width: 100%;
+    font-size: 2rem;
+    font-weight: 700;
+    color: #1A2A33;
+    line-height: 2.5rem;
+    text-align: center;
+    padding: 2.5rem 12rem;
+    border: none;
+    border-radius: 1.5rem;
+  }
+
+  .button:hover {
+    cursor: pointer; 
+  }
+
+  .vs-cpu {
+    background-color: #F2B137;
+    box-shadow: inset 0 -0.8rem 0 #B77C0C; 
+  }
+
+  .vs-cpu:hover {
+    background-color: #FFC860; 
+  }
+
+  .vs-player {
+   background-color: #31C3BD;
+   box-shadow: inset 0 -0.8rem 0 #1D716E; 
+  }
+
+  .vs-player:hover {
+    background-color: #65E9E4; 
+  }
+
+/* asdkmasn dkjasndkjajsndkljansdlkjnasdlkjansdkljansdlkjasndlkjasndlkajsndlkajsndlkjn */
+
+
 .game-board {
   display: grid;
   margin: 5rem 0;
@@ -132,6 +237,15 @@ border-radius: 1.5rem;
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 3rem; }
+
+  .backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none; }
 
   @media only screen and (max-width: 37.5em) {
   .logo-icon {
