--- a/starter-code/myTicTacToe/styles.css
+++ b/starter-code/myTicTacToe/styles.css
@@ -47,7 +47,6 @@ body {
 .landing-page {
   text-align: center;
   max-width: 90%;
-  animation: fadeIn 1s ease-in-out; 
 }
 
 .landing-page_header {
@@ -155,8 +154,6 @@ body {
   grid-gap: 2rem;
   align-items: center;
   text-align: center;
-
-  display: none !important;       /*   dont forget to undo this */
 }
 .game-board__turn {
   width: 100%;
@@ -198,6 +195,15 @@ body {
   grid-template-rows: repeat(3, 14rem);
   grid-gap: 2rem; 
 }
+
+.playArea .selectX svg path{
+  d: path("M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z");
+}
+
+.playArea .selectO svg path{
+  d: path("M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z");
+}
+
 
 .game-board-grid-item {
 padding: 3.8rem;
@@ -297,6 +303,7 @@ border-radius: 1.5rem;
         padding: 2rem 1.5rem; 
         } 
       }
+
       @media only screen and (max-width: 37.5em) {
         .game-board__score-bold {
           font-size: 2rem;
