adjusted selected class css so it can be used for Turn.

--- a/starter-code/myTicTacToe/styles.css
+++ b/starter-code/myTicTacToe/styles.css
@@ -196,11 +196,11 @@ body {
   grid-gap: 2rem; 
 }
 
-.playArea .selectX svg path{
+ .selectX svg path{
   d: path("M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z");
 }
 
-.playArea .selectO svg path{
+ .selectO svg path{
   d: path("M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z");
 }
 
@@ -250,7 +250,12 @@ border-radius: 1.5rem;
   display: block;
   font-size: 2.4rem;
   font-weight: 700;
-  line-height: 3rem; }
+  line-height: 3rem; 
+}
+
+
+
+
 
   .backdrop {
     position: absolute;
@@ -259,7 +264,11 @@ border-radius: 1.5rem;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    display: none; }
+    display: none; 
+  }
+
+
+
 
   @media only screen and (max-width: 37.5em) {
   .logo-icon {
