--- a/starter-code/myTicTacToe/styles.css
+++ b/starter-code/myTicTacToe/styles.css
@@ -1,5 +1,4 @@
 
-
 * {
   box-sizing: border-box;
 }
@@ -43,7 +42,7 @@ body {
   height: 3.2rem; 
 }
 
-/* akhjksjdfnksdjfngklsjdfngkljsnfdglkjsndfglkjsndfglkjsndfglkjsndfglkjsdnfglkjn */
+
 .landing-page {
   text-align: center;
   max-width: 90%;
@@ -144,7 +143,7 @@ body {
     background-color: #65E9E4; 
   }
 
-/* asdkmasn dkjasndkjajsndkljansdlkjnasdlkjansdkljansdlkjasndlkjasndlkajsndlkajsndlkjn */
+
 
 
 .game-board {
@@ -217,10 +216,17 @@ border-radius: 1.5rem;
   cursor: pointer; 
 }
 
+.selectO svg path {
+  fill: #F2B137;
+}
+
 .game-board-grid-item.x-selected, .game-board-grid-item.o-selected {
   cursor: not-allowed;
 }
 
+.game-board-grid-item.selectX, .game-board-grid-item.selectO {
+  cursor: not-allowed;
+}
 
 .game-board__xWin, .game-board__tie, .game-board__oWin {
   color: #1A2A33;
@@ -228,6 +234,8 @@ border-radius: 1.5rem;
   padding: 1.3rem 4rem;
   border-radius: 1.5rem; 
 }
+
+
 
   @media only screen and (max-width: 37.5em) {
     .game-board__xWin, .game-board__tie, .game-board__oWin {
@@ -251,6 +259,13 @@ border-radius: 1.5rem;
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 3rem; 
+}
+
+.playArea.X .game-board-grid-item:not(.x):not(.o):hover::before {
+  content: url("../assets/icon-x-outline.svg"); 
+}
+.playArea.O .game-board-grid-item:not(.x):not(.o):hover::before {
+  content: url("../assets/icon-o-outline.svg"); 
 }
 
 
