--- a/starter-code/myTicTacToe/styles.css
+++ b/starter-code/myTicTacToe/styles.css
@@ -250,9 +250,7 @@ border-radius: 1.5rem;
   background-color: #A8BFC9; 
 }
 
-.game-board__oWin {
-  background-color: #F2B137; 
-}
+
 
 .game-board__score-bold {
   display: block;
@@ -261,13 +259,38 @@ border-radius: 1.5rem;
   line-height: 3rem; 
 }
 
-.playArea.X .game-board-grid-item:not(.x):not(.o):hover::before {
+.playArea.X .game-board-grid-item:not(.selectX):not(.selectO):hover::before {
   content: url("../assets/icon-x-outline.svg"); 
 }
-.playArea.O .game-board-grid-item:not(.x):not(.o):hover::before {
+.playArea.O .game-board-grid-item:not(.selectX):not(.selectO):hover::before {
   content: url("../assets/icon-o-outline.svg"); 
 }
 
+.selectX.highlighted {
+  background-color: #FFC860; 
+}
+.selectX.highlighted svg{
+  background-color: #FFC860; 
+}
+.selectX.highlighted svg path {
+  fill: #1A2A33;
+}
+.selectX.highlighted{
+  box-shadow: inset 0 -0.8rem 0 #F2B137;
+}
+
+.selectO.highlighted {
+  background-color: #65E9E4; 
+}
+.selectO.highlighted svg{
+  background-color: #65E9E4; 
+}
+.selectO.highlighted svg path {
+  fill: #1A2A33;
+}
+.selectO.highlighted{
+  box-shadow: inset 0 -0.8rem 0 #31C3BD;
+}
 
 
 
