--- a/starter-code/myTicTacToe/styles.css
+++ b/starter-code/myTicTacToe/styles.css
@@ -1,6 +1,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Outfit', sans-serif;
 }
 
 .displayNone {
@@ -31,6 +32,7 @@ body {
   justify-content: center;
   overflow-x: hidden;
   position: relative; 
+  margin: 0;
 }
 
 .container {
@@ -120,9 +122,67 @@ body {
     border-radius: 1.5rem;
   }
 
-  .button:hover {
-    cursor: pointer; 
-  }
+.button:hover {
+  cursor: pointer; 
+}
+.button--small {
+  width: auto;
+  display: inline-block;
+  padding: 1.5rem 1.8rem; 
+}
+
+.button--small:last-child {
+  margin-left: 1rem;
+}
+  
+.button:not(:last-child) {
+  margin-bottom: 1.5rem;
+ }
+.button--yellow {
+  background-color: #F2B137;
+  box-shadow: inset 0 -0.8rem 0 #B77C0C; 
+}
+
+.button--yellow-small {
+  background-color: #F2B137;
+  box-shadow: inset 0 -0.4rem 0 #B77C0C; 
+}
+
+.button--yellow-small:hover {
+  background-color: #FFC860; 
+}
+
+.button--yellow:hover {
+  background-color: #FFC860; 
+}
+
+.button--blue {
+  background-color: #31C3BD;
+  box-shadow: inset 0 -0.8rem 0 #1D716E;
+}
+
+.button--blue:hover {
+  background-color: #65E9E4; 
+}
+
+.button--silver {
+  background-color: #A8BFC9;
+  box-shadow: inset 0 -0.8rem 0 #6991A2; 
+}
+
+.button--silver-small {
+  background-color: #A8BFC9;
+  box-shadow: inset 0 -0.4rem 0 #6991A2;
+}
+  
+.button--silver-small:hover {
+  background-color: #DBE8ED; 
+}
+
+.button--silver:hover {
+  background-color: #DBE8E0ED;
+}
+
 
   .vs-cpu {
     background-color: #F2B137;
@@ -267,46 +327,92 @@ border-radius: 1.5rem;
 }
 
 .selectX.highlighted {
-  background-color: #FFC860; 
+  background-color: #65E9E4;  
 }
 .selectX.highlighted svg{
-  background-color: #FFC860; 
+  background-color: #65E9E4; 
 }
 .selectX.highlighted svg path {
   fill: #1A2A33;
 }
 .selectX.highlighted{
-  box-shadow: inset 0 -0.8rem 0 #F2B137;
+  box-shadow: inset 0 -0.8rem 0 #31C3BD;
+  
 }
 
 .selectO.highlighted {
-  background-color: #65E9E4; 
+  background-color: #FFC860; 
 }
 .selectO.highlighted svg{
-  background-color: #65E9E4; 
+  background-color: #FFC860; 
 }
 .selectO.highlighted svg path {
   fill: #1A2A33;
 }
 .selectO.highlighted{
-  box-shadow: inset 0 -0.8rem 0 #31C3BD;
+  box-shadow: inset 0 -0.8rem 0 #F2B137;
 }
 
 
 
 
-  .backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none; 
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; 
+}
+
+
+.modal, .winnerModal, .tieModal, .restartModal {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+  padding: 6.7rem 0;
+  background-color: #1f3641;
+  text-align: center;
+  transform: translateY(-50%);
+  display: none;
+ }
+
+
+
+  .modal__buttons {
+    margin-top: 3rem; 
+  }
+  h3 {
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    line-height: 2rem; 
   }
 
+  #GameWinner {
+    display: inline-block;
+  }
 
+  .winnerModal__result .heading-lg {
+    display: inline-block;
+  }
 
+h1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 4rem;
+  line-height: 5rem; }
+  .heading-lg--blue {
+    color: #31c3bd; }
+  .heading-lg--yellow {
+    color: #f2b137; }
+  @media only screen and (max-width: 37.5em) {
+    .heading-lg {
+      font-size: 2.4rem; } }
 
   @media only screen and (max-width: 37.5em) {
   .logo-icon {
